<?php

use Illuminate\Database\Migrations\Migration;
use Illuminate\Database\Schema\Blueprint;
use Illuminate\Support\Facades\Schema;

return new class extends Migration
{
    /**
     * Run the migrations.
     */
    public function up(): void
    {
        Schema::create('aggregated_scores', function (Blueprint $table) {
            $table->id();
            $table->foreignId('student_id')->constrained('users')->cascadeOnDelete();
            $table->foreignId('class_id')->constrained('classes')->cascadeOnDelete();
            $table->date('period_start');
            $table->date('period_end');
            $table->enum('period_type', ['weekly', 'monthly', 'semester']);
            $table->decimal('avg_cognitive_score', 5, 2)->default(0.00);
            $table->decimal('pulse_p_score', 5, 2)->default(0.00);
            $table->decimal('pulse_u_score', 5, 2)->default(0.00);
            $table->decimal('pulse_l_score', 5, 2)->default(0.00);
            $table->decimal('pulse_se_score', 5, 2)->default(0.00);
            $table->timestamps();
        });
    }

    /**
     * Reverse the migrations.
     */
    public function down(): void
    {
        Schema::dropIfExists('aggregated_scores');
    }
};
